# Python4DataScience

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .vale.ini  CHANGELOG.rst  CITATION.cff  LICENSE  README.rst  badge-v0.json  codemeta.json  pyproject.toml
.dvc/: .gitignore  config
.github/workflows/: docs.yml  pre-commit.yml  prek.yml  zizmor.yml
LICENSES/: BSD-3-Clause.txt
data/: .gitignore  fortune500.csv.dvc  iris.csv.dvc
docs/: 404.rst  Makefile  conf.py  constraints.txt  genindex.rst  index.rst  intro.rst  make.bat  requirements.txt
docs/_build/: .gitignore
docs/_static/css/: alerts.css
docs/clean-prep/: bulwark.ipynb  dask-pipeline.ipynb  deduplicate.ipynb  hypothesis.ipynb  index.rst  iot_example.json  nulls.ipynb  outliers.ipynb  scikit-learn-reprocessing.ipynb  string-matching.ipynb  tdda.ipynb  voluptuous.ipynb
docs/data-processing/: file-systems.rst  geodata.rst  glossary.rst  index.rst  opendata.rst  pandas-io.rst  remote-file-systems.rst
docs/data-processing/apis/: index.rst
docs/data-processing/apis/fastapi/: example.rst  extensions.rst  index.rst  install.rst  tips.rst
docs/data-processing/apis/grpc/: accounts.proto  accounts_client.py  accounts_pb2.py  accounts_pb2_grpc.py  accounts_server.py  example.rst  index.rst  rfc4122.proto  test.rst
docs/data-processing/httpx/: index.rst  install-example.ipynb  module.ipynb  nominatim.py
docs/data-processing/intake/: data-engineers.ipynb  data-scientists.ipynb  index.rst  install.rst  us_states.yml
docs/data-processing/nosql/: column-oriented-db.rst  document-oriented-db.rst  graph-db.rst  index.rst  key-value-store.rst  object-db.rst  xml-db.rst
docs/data-processing/postgresql/: alembic.rst  db-api.rst  fdw.rst  index.rst  ipython-sql.rst  orm.rst  performance.rst  pganalyze.rst  pgmonitor.rst  plang.rst  psycopg2.rst  sec.rst  sqlalchemy.rst
docs/data-processing/postgresql/postgis/: index.rst  install.rst  load.rst  optimising.rst
docs/data-processing/requests/: index.rst  module.ipynb  nominatim.py  requests.ipynb
docs/data-processing/serialisation-formats/: excel.ipynb  index.rst  library.xlsx  others.rst  protobuf.rst  serialisation.ipynb
docs/data-processing/serialisation-formats/csv/: example.ipynb  index.rst
docs/data-processing/serialisation-formats/json/: example.ipynb  index.rst
docs/data-processing/serialisation-formats/pickle/: books.pkl  index.rst  pickle-examples.ipynb
docs/data-processing/serialisation-formats/toml/: example.ipynb  index.rst  pyproject.toml
docs/data-processing/serialisation-formats/xml-html/: beautifulsoup.ipynb  books.xml  index.rst  xml-html-examples.ipynb
docs/data-processing/serialisation-formats/yaml/: example.ipynb  index.rst
docs/performance/: asyncio-example.ipynb  cy_kmeans.pyx  dask.ipynb  dask.ipynb.license  ds_kmeans.py  index.rst  ipython-profiler.ipynb  memray.rst  multiprocessing-threading-async.rst  multiprocessing.ipynb  nb_kmeans.py  np_kmeans.py  parallelise-pandas.rst  pd_kmeans.py  perflint.rst  py_kmeans.py  scalene.ipynb  sp_kmeans.py  tachyon.rst  threading-example.ipynb  threading-forking-combined.ipynb  tprof.rst  tracing.rst  tutorials.csv
docs/productive/: documenting.rst  index.rst  licensing.rst  logging.rst  packaging.rst  reuse-compliant.svg.license  security.rst  testing.rst
docs/productive/cite/: data.rst  hermes.toml  index.rst  journals.rst  software.rst
docs/productive/cite/software/: cff.rst  codemeta.rst  doi.rst  git2prov.rst  github-cite.png.license  hermes.rst  hermes.toml  index.rst
docs/productive/dvc/: dag.rst  data.rst  experiments.rst  fds.rst  index.rst  init.rst  integration.rst  metrics.rst  params.rst  pipeline.rst  plots-diff.html  plots.html  reproduce.rst
docs/productive/envs/: index.rst
docs/productive/envs/pipenv/: deterministic.rst  env.rst  index.rst  install.rst  spack.rst  use.rst  workflows.rst
docs/productive/envs/spack/: build-automatisation.rst  combinatorial-builds.rst  envs.rst  future.rst  index.rst  install.rst  mirrors.rst  use.rst  usecase1.rst  usecase2.rst
docs/productive/envs/uv/: cicd.rst  claude-cursor.rst  dependency-bot.rst  docker.rst  index.rst
docs/productive/git/: advanced.rst  best-practices.rst  branch.rst  git-big-picture.rst  glossary.rst  index.rst  install-config.rst  jupyter-config.rst  log.rst  rebase.rst  revert.rst  review.rst  tag.rst  tools.rst  undo.rst  work.rst  working-areas.rst
docs/productive/git/advanced/: batch.rst  binary-files.rst  bisect.rst  cherry-pick.rst  etckeeper.rst  exceltocsv.py  git-big-picture.rst  git-big-picture_all.svg.license  index.rst  internals.rst  jupyter-notebooks.rst  lfs.rst  notes.rst  shell.rst
docs/productive/logging/: examples.ipynb  index.rst
docs/productive/qa/: anti-patterns.rst  black.rst  code-smells.rst  flake8.rst  index.rst  isort.rst  manifest.rst  mypy.rst  prettier.rst  pyre.rst  pysa.rst  pystra.rst  pytype.rst  rope.ipynb  ruff.rst  wily.rst
docs/productive/security/: .gitlab-ci.yml  index.rst  sbom.rst  sbomify.yml
docs/viz/: index.rst
docs/web/: index.rst
docs/workspace/: index.rst  jupyter.rst
docs/workspace/ipython/: debugging.ipynb  display.ipynb  examples.ipynb  examples.ipynb.license  extensions.rst  importing.ipynb  index.rst  magics.ipynb  myscript.py  shell.ipynb  start.rst  tab-completion-for-objects.png.license
docs/workspace/numpy/: arithmetic.ipynb  bool.ipynb  dtype.ipynb  file.ipynb  index.rst  indexing-slicing.ipynb  intro.ipynb  ndarray.ipynb  sort.ipynb  sort.ipynb.license  statistics.ipynb  statistics.ipynb.license  transpose.ipynb  ufunc.ipynb  unique.ipynb  vectorisation.ipynb  where.ipynb
docs/workspace/pandas/: aggregation.ipynb  apply.ipynb  arithmetic.ipynb  combining-merging.ipynb  convert-dtypes.ipynb  data-structures.ipynb  date-time.ipynb  discretisation.ipynb  group-operations.ipynb  index.rst  indexing.ipynb  pivoting-crosstab.ipynb  python-data-structures.ipynb  select-filter.ipynb  sorting-ranking.ipynb  string-manipulation.ipynb  transforming.ipynb
fastapi/: main.py
styles/cusy/: Polite.yml  Spelling.yml
(+69 files in other folders)
