[project]
name = "Python4DataScience"
version = "24.2.0"
authors = [
  { name="Veit Schiele", email="veit@cusy.io" },
]
description = "Teaching materials for the cusy training courses on Python-based data science workflows: https://cusy.io/en/seminars"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = []

[dependency-groups]
docs = [
    "furo",
    "ipython",
    "ipywidgets",
    "matplotlib",
    "nbsphinx",
    "notebook",
    "sphinx<8.2",
    "sphinx-copybutton",
    "sphinx-lint",
    "sphinx-notfound-page",
    "sphinx-sitemap",
    "sphinx_inline_tabs",
    "sphinxcontrib-svg2pdfconverter",
    "sphinxext.opengraph", # matplotlib is required for social cards
]

dev = [
    { include-group = "docs" },
    "pre-commit",
    "codespell",
    "vale",
]

[project.urls]
"Homepage" = "https://github.com/cusyio/Python4DataScience/"
"Bug Tracker" = "https://github.com/cusyio/Python4DataScience/issues"

[tool.setuptools]
packages = []

[tool.codespell]
skip = "*.csv, *.html, *.pdf, *.ipynb, ./docs/_build/*, ./styles/*"
ignore-words-list = "AAS, ans, comit, fo, Groth, Ned, Redict, redict, reStructedText, splitted"
