[project]
name = "python4datascience"
version = "24.2.0"
description = "Teaching materials for the cusy training courses on Python-based data science workflows: https://cusy.io/en/seminars"
readme = "README.rst"
authors = [
  { name = "Veit Schiele", email = "veit@cusy.io" },
]
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [  ]

urls."Bug Tracker" = "https://github.com/cusyio/Python4DataScience/issues"
urls."Homepage" = "https://github.com/cusyio/Python4DataScience/"

[dependency-groups]
dev = [
  "codespell",
  "pre-commit",
  "reuse>=5.0.2",
  "vale",
  { include-group = "docs" },
]
docs = [
  "furo",
  "ipython",
  "ipywidgets",
  "matplotlib",
  "nbsphinx",
  "notebook",
  "sphinx<8.2",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinx-lint",
  "sphinx-notfound-page",
  "sphinx-sitemap",
  "sphinxcontrib-svg2pdfconverter",
  "sphinxext-opengraph",            # matplotlib is required for social cards
]

[tool.setuptools]
packages = [  ]

[tool.codespell]
skip = "*.csv, *.html, *.pdf, *.ipynb, ./docs/_build/*, ./styles/*"
ignore-words-list = "AAS, ans, comit, fo, Groth, Ned, Redict, redict, reStructedText, splitted"
